# control_usb_cams

./: CMakeLists.txt  README.md
inc/: camera.h  camera_brandA.h  camera_brandB.h  camera_config.h  cameras_controller.h
src/: camera_brandA.cpp  camera_brandB.cpp  cameras_controller.cpp  main.cpp
